[package]
name = "slurper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
time = "0.1.42"
env_logger = "0.7"
log = "0.4.8"
futures = "0.3.1"
chrono = "0.4.19"
serde = "1.0.126"
serde_derive = "1.0.117"
serde_json = "1.0.68"
charts = "0.3.0"
reqwest = { version = "0.11.4", features = ["json"] }
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }
average = "0.13.1"
mongodb = "2.0.0-beta.2"
tokio = { version = "1.4.0", features = ["full"] }
hnsw = "0.8"
ndarray = { version = "0.14", features = ["rayon", "approx"]}
ndarray-linalg = "0.14"
ndarray-rand = "0.13"
ndarray-stats = "0.4"
num-traits = "0.2"
rand_isaac = "0.3"
space = "0.12"
thiserror = "=1.0.25"
partitions = "0.2.4"
linfa = { version = "0.4.0", features = ["ndarray-linalg"] }
linfa-clustering = {version = "0.4.0"}
rand_pcg = "0.3.1"
noisy_float = "0.2.0"
serde-xml-rs = "0.5.0"
clap = {version = "~2.27.0", features = ["yaml"]}
sha2 = "0.9.8"
hmac = "0.11.0"
base64 = "0.13.0"
http = "0.2"
hex = "0.4.3"